@@ -1,3 +1,7 @@
+2010-04-01  Kasper Peeters  <kasper.peeters@aei.mpg.de>
+
+	* Fixed bug in @expand_power which would mess up numerical factors.
+
 2010-03-28  Kasper Peeters  <kasper.peeters@aei.mpg.de>
 
 	* Fixed a bug in printing of \pow.
